# fastapi-rag-practice

./: .gitignore  README.md  pyproject.toml
app/: __init__.py  main.py  schemas.py
app/routers/: __init__.py  ingest.py  rag.py
app/services/: __init__.py  crawler.py  ingestion_service.py  rag_service.py
data/: claude_code_changelog.md
tests/: test_main.py  test_new_ingestion.py  test_rag.py
