[project]
name = "fastapi-rag-practice"
version = "0.1.0"
description = "FastAPI starter project for experimenting with retrieval-augmented generation."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.110.0,<1.0",
    "uvicorn[standard]>=0.27.1,<1.0",
    "sentence-transformers>=2.2.2",
    "chromadb>=0.4.22",
    "openai>=1.0.0",
    "python-dotenv>=1.0.0",
    "gradio>=5.49.1",
    "requests>=2.32.5",
]

[project.optional-dependencies]
dev = [
    "httpx>=0.27.0,<0.28.0",
    "pytest>=8.1.0,<9.0.0",
]

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
namespaces = false

